fix position of icons likes, bookmark, comment, edit and delete wrapping under the ingredients coloured box

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -189,7 +189,7 @@ main {
 }
 
 .sm-width-icons {
-    width: 75px;
+    width: 40px;
     text-align: center;
     line-height: 45px;
 }
@@ -197,6 +197,14 @@ main {
 .card-title-link {
     color: black;
     text-decoration: none;
+}
+
+.width-65px {
+    width: 65px;
+}
+
+.width-40px {
+    width: 40px;
 }
 
 /* Styles Edit recipe */
